# taffy

./: .gitignore  CHANGELOG.md  Cargo.toml  OVERVIEW.md  README.md  ROADMAP.md
assets/: taffy.desktop
packaging/appimage/usr/share/metainfo/: cargo-appimage.appdata.xml
packaging/metainfo/: taffy.appdata.xml
scripts/: build-appimage.sh  build-packages.sh  install-local.sh
src/: capture.rs  config.rs  main.rs  shortcuts.rs
