[package]
name = "taffy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ashpd = { version = "0.13.9", features = ["tokio", "screenshot", "screencast", "global_shortcuts"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
dirs = "6.0.0"
futures-util = "0.3.32"
gstreamer = "0.25.1"
iced = { version = "0.14.0", features = ["image", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
url = "2.5.7"
